dod work on alignment. fixed font wight

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ body{
 }
 .navbar .nav-link{
     font-family: 'Roboto Slab', serif ;
-    font-weight: 550;
+    font-weight: 500;
     font-size: 0.9rem;
     color: #fafafa;
 }
@@ -232,3 +232,6 @@ height:100%;
 width:100%;
 position:absolute;
 }
+
+
+
